# Practise

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in  main.cpp
Math/: Makefile  StaticMath.cpp  StaticMath.h
